fix(desktop): header anchor alignment

--- a/tribute.css
+++ b/tribute.css
@@ -182,10 +182,6 @@ h2 {
   text-transform: uppercase;
 }
 
-.section-header {
-  margin-top: 2em;
-}
-
 p {
   margin: 2em 2em;
   font-size: 1.2em;
